# qik

./: .gitignore  README.md
firmware/source/: Channel.h  Commands.h  Encoder.cpp  Encoder.h  Encoder.side  Main.cpp  Main.side  MotorController.cpp  MotorController.h  Qik.cpp  Qik.h  Qik.side  QikCOmmunication.cpp  QikCOmmunication.side  QikFirmware.side  Uart.cpp
firmware/source/include/: Commands.h  Encoder.h  Qik.h  Uart.h
firmware/source/lmm/: Encoder.opp  Qik.opp  QikCOmmunication.binary  QikCOmmunication.elf  Uart.opp
firmware/source/src/: Encoder.cpp  Main.cpp  Main.side  Qik.cpp  Uart.cpp
qik_master/: .gitignore  CMakeLists.txt
qik_master/source/include/: qik_commands.hpp  qik_master.hpp
qik_master/source/src/: main.cpp  qik_master.cpp
